@@ -62,6 +62,30 @@ eth_addr_is_reserved(const uint8_t ea[ETH_ADDR_LEN])
             {0x01, 0x08, 0xc2, 0x00, 0x00, 0x00},
             {0xff, 0xff, 0xff, 0xff, 0xff, 0xf0}},
 
+        { /* VRRP IPv4. */
+            {0x00, 0x00, 0x5e, 0x00, 0x01, 0x00},
+            {0xff, 0xff, 0xff, 0xff, 0xff, 0x00}},
+
+        { /* VRRP IPv6. */
+            {0x00, 0x00, 0x5e, 0x00, 0x02, 0x00},
+            {0xff, 0xff, 0xff, 0xff, 0xff, 0x00}},
+
+        { /* HSRPv1. */
+            {0x00, 0x00, 0x0c, 0x07, 0xac, 0x00},
+            {0xff, 0xff, 0xff, 0xff, 0xff, 0x00}},
+
+        { /* HSRPv2. */
+            {0x00, 0x00, 0x0c, 0x9f, 0xf0, 0x00},
+            {0xff, 0xff, 0xff, 0xff, 0xf0, 0x00}},
+
+        { /* GLBP. */
+            {0x00, 0x07, 0xb4, 0x00, 0x00, 0x00},
+            {0xff, 0xff, 0xff, 0x00, 0x00, 0x00}},
+
+        { /* Extreme Discovery Protocol. */
+            {0x00, 0xE0, 0x2B, 0x00, 0x00, 0x00},
+            {0xff, 0xff, 0xff, 0xff, 0xf0, 0x00}},
+
         { /* Cisco Inter Switch Link. */
             {0x01, 0x00, 0x0c, 0x00, 0x00, 0x00},
             {0xff, 0xff, 0xff, 0xff, 0xff, 0xff}},
