@@ -3,6 +3,8 @@ post-v1.7.0
     - ovs-ofctl:
         - "mod-port" command can now control all OpenFlow config flags.
     - Added support for arbitrary ethernet masks
+    - Additional protocols are not mirrored and dropped when forward-bpdu is
+      false.  For a full list, see the ovs-vswitchd.conf.db man page.
 
 
 v1.7.0 - xx xxx xxxx
